--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equip="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640">
 
     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
@@ -21,28 +21,28 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/lili7897/A-carrer">View on GitHub</a>
+    <a ID="forkme_banner" href="https://github.com/lili7897/A-carrer">View on GitHub</a>
     <div class="shell">
 
       <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
+        <spam class="ribbon-outer">
+          <spam class="ribbon-inner">
             <h1>A career</h1>
             <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+          </spam>
+          <spam class="left-tail"></spam>
+          <spam class="right-tail"></spam>
+        </spam>
       </header>
 
       <section id="downloads">
-        <span class="inner">
+        <spam class="inner">
           <a href="https://github.com/lili7897/A-carrer/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/lili7897/A-carrer/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
+        </spam>
       </section>
 
 
-      <span class="banner-fix"></span>
+      <spam class="banner-fix"></spam>
 
 
       <section id="main_content">
@@ -64,7 +64,7 @@ $ git checkout gh-pages
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></spam></a>Rather Drive Stick?</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
@@ -80,15 +80,15 @@ $ git checkout gh-pages
       </section>
 
       <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
+        <spam class="ribbon-outer">
+          <spam class="ribbon-inner">
             <p>this project by <a href="https://github.com/lili7897">lili7897</a> can be found on <a href="https://github.com/lili7897/A-carrer">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+          </spam>
+          <spam class="left-tail"></span>
+          <spam class="right-tail"></span>
+        </spam>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+        <spam class="octocat"></span>
       </footer>
 
     </div>
