--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <a ID="forkme_banner" href="https://github.com/lili7897/A-carrer">View on GitHub</a>
+    <a id="form_banner" href="https://github.com/lili7897/A-carrer">View on GitHub</a>
     <div class="shell">
 
       <header>
@@ -88,7 +88,7 @@ $ git checkout gh-pages
           <spam class="right-tail"></span>
         </spam>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <spam class="octocat"></span>
+        <spam class="octocat"></spam>
       </footer>
 
     </div>
