--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ $ git checkout gh-pages
           <spam class="ribbon-inner">
             <p>this project by <a href="https://github.com/lili7897">lili7897</a> can be found on <a href="https://github.com/lili7897/A-carrer">GitHub</a></p>
           </spam>
-          <spam class="left-tail"></span>
-          <spam class="right-tail"></span>
+          <spam class="left-tail"></spam>
+          <spam class="right-tail"></spam>
         </spam>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
         <spam class="octocat"></spam>
