--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta http-equip="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640">
 
     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
@@ -21,28 +21,28 @@
   </head>
 
   <body>
-    <a id="form_banner" href="https://github.com/lili7897/A-carrer">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/lili7897/A-carrer">View on GitHub</a>
     <div class="shell">
 
       <header>
-        <spam class="ribbon-outer">
-          <spam class="ribbon-inner">
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
             <h1>A career</h1>
             <h2></h2>
-          </spam>
-          <spam class="left-tail"></spam>
-          <spam class="right-tail"></spam>
-        </spam>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
       </header>
 
       <section id="downloads">
-        <spam class="inner">
+        <span class="inner">
           <a href="https://github.com/lili7897/A-carrer/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/lili7897/A-carrer/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </spam>
+        </span>
       </section>
 
 
-      <spam class="banner-fix"></spam>
+      <span class="banner-fix"></span>
 
 
       <section id="main_content">
@@ -61,12 +61,12 @@ $ git checkout gh-pages
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue the layouts to browse through them. You can easily go back to your page and edit before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></spam></a>Rather Drive Stick?</h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
-<p>If you prefer not to  use this automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting the regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
@@ -80,15 +80,15 @@ $ git checkout gh-pages
       </section>
 
       <footer>
-        <spam class="ribbon-outer">
-          <spam class="ribbon-inner">
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
             <p>this project by <a href="https://github.com/lili7897">lili7897</a> can be found on <a href="https://github.com/lili7897/A-carrer">GitHub</a></p>
-          </spam>
-          <spam class="left-tail"></spam>
-          <spam class="right-tail"></spam>
-        </spam>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <spam class="octocat"></spam>
+        <span class="octocat"></span>
       </footer>
 
     </div>
