--- a/index.html
+++ b/index.html
@@ -1,43 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>A career by lili7897</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
+    <meta name="viewport" content="width=640">
+
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>A career by lili7897</title>
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/lili7897/A-carrer">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/lili7897/A-carrer/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/lili7897/A-carrer/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+    <a id="forkme_banner" href="https://github.com/lili7897/A-carrer">View on GitHub</a>
+    <div class="shell">
 
-    <div class="wrapper">
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>A career</h1>
+            <h2>Web button with CSS3</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-      <section>
-        <div id="title">
-          <h1>A career</h1>
-          <p>Web button with CSS3</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/lili7897">lili7897</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/lili7897/A-carrer/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/lili7897/A-carrer/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
 
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -68,12 +76,24 @@ $ git checkout gh-pages
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.
+<a href="http://images.google.com/imgres?imgurl=http%3A%2F%2Feconomictimes.indiatimes.com%2Fphoto%2F18565931.cms&amp;imgrefurl=http%3A%2F%2Fsarkariniyukti.blogspot.com%2F2013%2F04%2Fdownload-admit-card-for-combined-asst.html&amp;h=300&amp;w=400&amp;tbnid=fWTOVJf3tZyQWM%3A&amp;zoom=1&amp;q=computer%20operator&amp;docid=jzNVuL68Fm1zWM&amp;ei=k66RVLXOEIKqogT334HYDw&amp;tbm=isch&amp;ved=0CDAQMygSMBI&amp;iact=rc&amp;uact=3&amp;dur=441&amp;page=1&amp;start=0&amp;ndsp=27&amp;surl=1&amp;safe=active">http://images.google.com/imgres?imgurl=http%3A%2F%2Feconomictimes.indiatimes.com%2Fphoto%2F18565931.cms&amp;imgrefurl=http%3A%2F%2Fsarkariniyukti.blogspot.com%2F2013%2F04%2Fdownload-admit-card-for-combined-asst.html&amp;h=300&amp;w=400&amp;tbnid=fWTOVJf3tZyQWM%3A&amp;zoom=1&amp;q=computer%20operator&amp;docid=jzNVuL68Fm1zWM&amp;ei=k66RVLXOEIKqogT334HYDw&amp;tbm=isch&amp;ved=0CDAQMygSMBI&amp;iact=rc&amp;uact=3&amp;dur=441&amp;page=1&amp;start=0&amp;ndsp=27&amp;surl=1&amp;safe=active</a></p>
       </section>
 
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/lili7897">lili7897</a> can be found on <a href="https://github.com/lili7897/A-carrer">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
+
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
   </body>
 </html>
-http://images.google.com/imgres?imgurl=http%3A%2F%2Feconomictimes.indiatimes.com%2Fphoto%2F18565931.cms&imgrefurl=http%3A%2F%2Fsarkariniyukti.blogspot.com%2F2013%2F04%2Fdownload-admit-card-for-combined-asst.html&h=300&w=400&tbnid=fWTOVJf3tZyQWM%3A&zoom=1&q=computer%20operator&docid=jzNVuL68Fm1zWM&ei=k66RVLXOEIKqogT334HYDw&tbm=isch&ved=0CDAQMygSMBI&iact=rc&uact=3&dur=441&page=1&start=0&ndsp=27&surl=1&safe=active
