--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>A career by lili7897</title>
+    <title>Computer-Operators by lili7897</title>
   </head>
 
   <body>
@@ -62,7 +62,7 @@ $ git checkout gh-pages
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-<img src="http://economictimes.indiatimes.com/photo/18565931.cms">
+
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
@@ -96,5 +96,4 @@ $ git checkout gh-pages
 
     
   </body>
-</html>
 
