--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equip="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640">
 
     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>A career</h1>
-            <h2>Web button with CSS3</h2>
+            <h2>Web button with CSS3</h1>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -96,4 +96,5 @@ $ git checkout gh-pages
 
     
   </body>
+  <home></home>
 
