--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@ $ git checkout gh-pages
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.
-<a href="http://images.google.com/imgres?imgurl=http%3A%2F%2Feconomictimes.indiatimes.com%2Fphoto%2F18565931.cms&amp;imgrefurl=http%3A%2F%2Fsarkariniyukti.blogspot.com%2F2013%2F04%2Fdownload-admit-card-for-combined-asst.html&amp;h=300&amp;w=400&amp;tbnid=fWTOVJf3tZyQWM%3A&amp;zoom=1&amp;q=computer%20operator&amp;docid=jzNVuL68Fm1zWM&amp;ei=k66RVLXOEIKqogT334HYDw&amp;tbm=isch&amp;ved=0CDAQMygSMBI&amp;iact=rc&amp;uact=3&amp;dur=441&amp;page=1&amp;start=0&amp;ndsp=27&amp;surl=1&amp;safe=active">http://images.google.com/imgres?imgurl=http%3A%2F%2Feconomictimes.indiatimes.com%2Fphoto%2F18565931.cms&amp;imgrefurl=http%3A%2F%2Fsarkariniyukti.blogspot.com%2F2013%2F04%2Fdownload-admit-card-for-combined-asst.html&amp;h=300&amp;w=400&amp;tbnid=fWTOVJf3tZyQWM%3A&amp;zoom=1&amp;q=computer%20operator&amp;docid=jzNVuL68Fm1zWM&amp;ei=k66RVLXOEIKqogT334HYDw&amp;tbm=isch&amp;ved=0CDAQMygSMBI&amp;iact=rc&amp;uact=3&amp;dur=441&amp;page=1&amp;start=0&amp;ndsp=27&amp;surl=1&amp;safe=active</a></p>
-      </section>
+<a href
 
       <footer>
         <span class="ribbon-outer">
